<resources>
    <string name="app_name">Pedralbes Food Company</string>

    <string name="Login">Login</string>
    <string name="Iniciar">Accedir</string>
    <string name="Usuari">Usuari</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="Dades">Dades Usuari</string>
    <string name="Tancar">Tancar sessió</string>

    <string name="title_activity_botiga">Proyecto Tienda</string>
    <string name="Finalizar">Finalitzar compra</string>
    <string name="PrecioTotal">Preu total</string>
    <string name="Hora">Hora</string>
    <string name="Fecha">Data</string>
    <string name="Comandas">Comandas</string>
    <string name="missatge">Encara no tens compte?</string>
    <string name="Registrar">Registrar-se</string>
    <string name="registre">Registre</string>
    <string name="cancelar">Cancelar</string>
    <string name="afegir">Afegir</string>

    <string name="idComandas">Comanda :</string>


    <!-- Strings used for fragments for dades -->
    <string name="nom">Nom</string>
    <string name="apellido">Cognom</string>
    <string name="pass">Contrasenya</string>
    <string name="DatosPaga">Dades Pagament</string>
    <string name="correo">Correu</string>
    <string name="NTarjeta">NºTargeta</string>
    <string name="CVV">CVV</string>
    <string name="DataCaducitat">Data de caducitat</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="coca">Coca Cola</string>
    <string name="productos">Productos</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Precio">€</string>
    <string name="Cantidad">0</string>
    <string name="productes">Productes</string>
    <string name="Carrito">Cistella</string>
    <string name="Compra">Comprar</string>
    <string name="Pagar">Pagar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>