<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#fbeed9"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagenC"
                android:layout_width="221dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/cocacola" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TituloC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/coca"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/descripcionC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/Descripcion"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/Precio"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mas"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/mas" />

                    <TextView
                        android:id="@+id/cantidad"
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/Cantidad" />

                    <ImageView
                        android:id="@+id/menos"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#fbeed9"
                        app:srcCompat="@drawable/menos" />

                    <Button
                        android:id="@+id/car"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/afegir" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#000000"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>
