<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadesUsuari">

    <TextView
        android:id="@+id/tituloD"
        android:layout_width="422dp"
        android:layout_height="67dp"
        android:background="#9F50ED"
        android:gravity="center"
        android:text="@string/Dades"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dadesTrajeta"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="#9F50ED"
        android:gravity="center"
        android:text="@string/DatosPaga"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloD"
        app:layout_constraintVertical_bias="0.626" />

    <TextView
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DataCaducitat"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvv"
        app:layout_constraintVertical_bias="0.423" />

    <TextView
        android:id="@+id/infoCVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/infofecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@+id/cvv" />

    <TextView
        android:id="@+id/infoNumTargeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/infoCVV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toEndOf="@+id/NumTrageta"
        app:layout_constraintTop_toBottomOf="@+id/dadesTrajeta"
        app:layout_constraintVertical_bias="0.348" />

    <TextView
        android:id="@+id/NumTrageta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NTarjeta"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dadesTrajeta"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CVV"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumTrageta"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/inforuserD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/infonom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toEndOf="@+id/userD"
        app:layout_constraintTop_toBottomOf="@+id/tituloD"
        app:layout_constraintVertical_bias="0.397" />

    <TextView
        android:id="@+id/cognom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="452dp"
        android:text="@string/apellido"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/infonom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/infocognom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toEndOf="@+id/nom" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cognom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userD"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/infocorreu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/infocontraD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toEndOf="@+id/correo" />

    <TextView
        android:id="@+id/infocognom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/infocorreu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@+id/cognom" />

    <TextView
        android:id="@+id/contraD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cognom"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contraD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cognom"
        app:layout_constraintVertical_bias="0.494" />

    <TextView
        android:id="@+id/infocontraD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/dadesTrajeta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toEndOf="@+id/contraD" />

    <TextView
        android:id="@+id/userD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Usuari"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cognom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloD"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/infofecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/fecha" />

</androidx.constraintlayout.widget.ConstraintLayout>